Fixed alignment of search and selected nugget

--- a/src/styles/layout/_nugget_table_view_layout.sass
+++ b/src/styles/layout/_nugget_table_view_layout.sass
@@ -23,6 +23,9 @@
           &.selected
             position: relative
 
+            .subscribe
+              padding-left: $gutter * 4
+
           .cell
             box-sizing: border-box
             padding: 0 $gutter * 5
